[package]
name = "lightningchess-jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = {version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "time", "chrono"] }
tokio = { version = "1", features = ["full"] }